fix issue with screen scrolling right on iphone 5 screen size

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,6 @@
 
 html {
     height: 100%;
-
 }
 
 .col,
@@ -18,7 +17,6 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #EDEDE9;
-
 }
 
 /* css for animation on scroll */
@@ -58,7 +56,7 @@ body {
 
 .link-button,
 .item-link-button {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     font-weight: 300;
     text-decoration: none;
     padding: 2rem;
@@ -66,7 +64,7 @@ body {
 }
 
 .link-button {
-    width: 16rem;
+    width: 15rem;
     height: 5rem;
 }
 
@@ -213,7 +211,6 @@ input[type="number"]:focus,
 table input[type="number"]:focus {
     background-color: #EDEDE9;
     outline: none;
-
 }
 
 label[for="quantity"] {
@@ -393,7 +390,7 @@ input:-webkit-autofill {
 .top-navigation {
     height: 6rem;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     z-index: 100;
     transition: all .5s ease-in;
 }
@@ -437,11 +434,7 @@ input:-webkit-autofill {
 }
 
 .logo {
-    font-size: 1.75rem;
-    font-weight: 500;
-    color: #EDEDE9;
-    text-decoration: none;
-    margin-left: 7rem;
+    display: none;  
 }
 
 .top-navigation ul {
@@ -451,6 +444,7 @@ input:-webkit-autofill {
     align-items: center;
     margin-right: 1rem;
     margin-bottom: 0;
+    padding:0;
 }
 
 .top-nav-item {
@@ -463,7 +457,6 @@ input:-webkit-autofill {
     font-size: 1.5rem;
     letter-spacing: .2rem;
     cursor: pointer;
-
 }
 
 .top-nav-item i {
@@ -489,7 +482,7 @@ input:-webkit-autofill {
 
 .side-nav {
     height: 100vh;
-    width: 37.5rem;
+    width: 100vw;
     position: fixed;
     top: 0;
     left: 0;
@@ -781,7 +774,7 @@ input:-webkit-autofill {
     color: #EDEDE9;
     font-weight: 500;
     letter-spacing: .2rem;
-    font-size: 5rem;
+    font-size: 4.5rem;
     text-align: center;
 }
 
@@ -948,8 +941,8 @@ input:-webkit-autofill {
 
 
 .category-image {
-    height: 33rem;
-    width: 33rem;
+    height: 32rem;
+    width: 32rem;
     display: block;
     margin: 2rem auto;
     position: relative;
@@ -1105,14 +1098,15 @@ input:-webkit-autofill {
 .social-media {
     flex-direction: row;
     list-style: none;
+    justify-content: space-evenly;
     margin-top: 2rem;
 }
 
 
 .social-media a i {
     font-size: 3rem;
-    margin: 0 2rem;
-    padding: .5rem;
+    /* margin: 0 2rem;
+    padding: .5rem; */
     transition: all .5s ease-in-out;
     color: #EDEDE9;
 }
@@ -1173,8 +1167,8 @@ input:-webkit-autofill {
 }
 
 .our-story-col img {
-    height: 35rem;
-    width: 35rem;
+    height: 32rem;
+    width: 32rem;
     margin: 2rem 0;
 }
 
@@ -1306,6 +1300,7 @@ td p {
     max-height: 30rem;
     overflow-x: hidden;
     overflow-y: auto;
+    max-width: 100vw;
 }
 
 /* ----------------------Allauth  */
@@ -1450,7 +1445,7 @@ td p {
     height: fit-content;
     position: absolute;
     bottom: -7.5rem;
-    left: -2rem;
+    left: -1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1478,8 +1473,17 @@ td p {
     }
 
     .logo {
+        display: block;
         font-size: 2.5rem;
         margin-left: 20rem;
+        font-weight: 500;
+        color: #EDEDE9;
+        text-decoration: none;
+        margin-left: 7rem;
+    }
+
+    .side-nav{
+        width: 37.5rem;
     }
 
     .hero-col-right h1 {
@@ -1490,7 +1494,6 @@ td p {
     .new-item-slider-container {
         width: 60rem
     }
-
 }
 
 /* large 992px*/
@@ -1506,7 +1509,6 @@ td p {
     .logo {
         font-size: 3rem;
     }
-
 
     .hero-col-right h1 {
         font-size: 8rem;
@@ -1536,7 +1538,6 @@ td p {
     .review p strong {
         font-size: 1.75rem;
     }
-
 
     .newsletter-form input {
         width: 65%;
@@ -1634,9 +1635,6 @@ td p {
         transform: translateX(-51%);
     }
 
-    /* .item-container {
-        padding: 2rem 3rem;
-    } */
     .new-item-slider-container {
         width: 102rem
     }
